# sidequest

./: .dockerignore  .gitignore  Dockerfile  README.md  setup.sh
.agents/skills/dev-setup/: SKILL.md
.agents/skills/performance/: SKILL.md
.claude/: settings.local.json
apps/.claude/: settings.local.json
apps/backend/: README.md  pyproject.toml
apps/backend/app/: __init__.py  catalog_prompt.py  main.py  model_capabilities.py  security.py
apps/backend/tests/: test_api.py
apps/frontend/: .nvimlog  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.jsx  App.tsx  main.tsx  styles.css
apps/frontend/src/chat/api/: streamChat.ts
apps/frontend/src/chat/components/: AssistantReasoningPanel.tsx  ChatCanvas.test.tsx  ChatCanvas.tsx  ChatWindow.tsx  ChatWindowComposer.test.tsx  ChatWindowComposer.tsx  ChatWindowHeader.test.tsx  ChatWindowHeader.tsx  ChatWindowMessages.test.ts  ChatWindowMessages.test.tsx  ChatWindowMessages.tsx  ChatWindowResizeHandles.tsx  ChatWorkspace.tsx  CloseTreeModal.tsx  CollapsibleDisclosure.tsx  ConnectionLayer.tsx  EmptyNoteBackground.tsx  IframeMessageEmbed.tsx  MessageContent.tsx  NoticeToast.tsx  PaperSurface.test.tsx  ui.ts  (+8 more)
apps/frontend/src/config/: env.ts
apps/frontend/src/motion/: react.tsx
apps/frontend/src/stores/: modelStore.ts  noticeStore.ts
apps/frontend/src/types/: chat.ts  index.ts  workspace.ts
apps/image-service/: package-lock.json  package.json
apps/image-service/src/: server.tsx
deploy/: build-and-run.sh  nginx.conf.template  start.sh  test-docker.sh
(+83 files in other folders)
