[project]
name = "sidequest-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Sidequest"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.0",
    "openai>=1.108.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
