[project]
name = "sidequest-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Sidequest"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.0.20",
    "fastapi>=0.115.12",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
